@@ -62,6 +62,17 @@ extern "C" {
 #ifndef _NO_W32_PSEUDO_MODIFIERS
 #define IN
 #define OUT
+#define __in
+#define __inout
+#define __in_opt
+#define __in_bcount(x)
+#define __in_ecount(x)
+#define __out
+#define __out_ecount_part(x)
+#define __out_ecount_part(x,y)
+#define __struct_bcount(x)
+#define __field_ecount_opt(x)
+#define __out_bcount_opt(x)
 #ifndef OPTIONAL
 #define OPTIONAL
 #endif
